Wed Dec  3 14:14:58 1997  David Taylor  <taylor@texas.cygnus.com>

	* sol-thread.c: additional support for debugging threaded core
	files on solaris; previously only kernel threads were found --
	user threads generated errors.
	* corelow.c: don't register core_ops as a target if
	coreops_suppress_target is true (set by sol-thread.c).

Tue Dec  2 14:53:09 1997  Michael Snyder  (msnyder@cleaver.cygnus.com)

	* tracepoint.c: make "tdump" command handle literal memranges.

Tue Dec  2 11:34:48 1997  Michael Snyder  (msnyder@cleaver.cygnus.com)

	* tracepoint.c: use "lookup_cmd" to parse actions commands
	(thus allowing unambiguous prefixes and aliases).

Tue Dec  2 10:15:57 1997  Nick Clifton  <nickc@cygnus.com>

	* configure.tgt: Add support for Thumb target.

Tue Dec  2 10:14:15 1997  Michael Snyder  (msnyder@cleaver.cygnus.com)

	* tracepoint.c: move prototype of validate_actionline(), and
	make it consistent with the function declaration.

Mon Dec  1 10:19:44 1997  Keith Seitz  <keiths@onions.cygnus.com>

	* gdbtk.c: move include of "guitcl.h" back out of IDE ifdef
	(gdbtk_init): move ide_initialize_paths out of IDE ifdef

	* configure.in (TCL_LIBS, CONFIG_DEPS): add IDE libraries for all
	builds
	(CONFIG_OBS): remove tracepoint.o, which should always be included

	* configure: regenerate

	* Makefile.in (install-only): ALWAYS install the new gdbtk
	(REMOTE_OBS): add tracepoint.o
	
Thu Nov 27 09:07:18 1997  Michael Meissner  <meissner@cygnus.com>

	* configure.in ({TCL_LIBS,CONFIG_DEPS}): Don't add IDE libraries
	if not --enable-ide.
	(CONFIG_OBS): Add tracepoint.o to list if --enable-gdbtk.
	* configure: Regenerate.

	* gdbtk.c (gdb_get_breakpoint_info): Add missing filename
	argument.
	(toplevel): Move include of guitcl.h into #ifdef IDE region.
	(gdbtk_init): Move ide_initialize_paths call into #ifdef IDE
	section.

	* Makefile.in (tracepoint_h): New macro for tracepoint.h
	includes.
	(tracepoint.o): Add rule to build.
	(gdbtk.o): Update dependencies.
